force-app/main/default/objects/ucinn_ascendv2__Matching_Key_Rule__c/ucinn_ascendv2__Matching_Key_Rule__c.object-meta.xml
<CustomObject>
    <description>Represent matching key rule for each object.</description>
    <label>Matching Key Rule</label>
    <nameField>
        <label>Matching Key Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matching Key Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>