force-app/main/default/objects/ucinn_ascendv2__Matching_Key_Rule__c/fields/ucinn_ascendv2__Create_Matching_Keys__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Create_Matching_Keys__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if matching keys should be created for this matching key rule.</description>
    <label>Create Matching Keys</label>
    <type>Checkbox</type>
</CustomField>