force-app/main/default/objects/ucinn_ascendv2__Matching_Key_Rule__c/fields/ucinn_ascendv2__Key_Value_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Key_Value_Field_API_Name__c</fullName>
    <description>Indicate in which filed on this object the key value will be stored at.</description>
    <label>Key Value Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>