force-app/main/default/objects/ucinn_ascendv2__Matching_Key_Rule__c/fields/ucinn_ascendv2__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Object_Name__c</fullName>
    <description>The name for the object this matching rule applied to.</description>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>