force-app/main/default/objects/ucinn_ascendv2__Matching_Key_Rule__c/fields/ucinn_ascendv2__Result_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Result_Field_API_Name__c</fullName>
    <label>Result Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>